# enjin-cpp-sdk

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Config.cmake.in  DOXYFILE  NOTICE  README.md  conanfile.py  enjinsdkConfig.cmake.in
src/: CMakeLists.txt  ClientMiddleware.cpp  PlayerClient.cpp  ProjectClient.cpp  TrustedPlatformMiddleware.cpp
src/events/: CMakeLists.txt  EventListenerRegistration.cpp  EventTypeDef.cpp  EventTypeDef.hpp  PusherEventListener.cpp  PusherEventService.cpp
src/events/channels/: AppChannel.cpp  AppChannel.hpp  AssetChannel.cpp  AssetChannel.hpp  CMakeLists.txt  IChannel.hpp  PlayerChannel.cpp  PlayerChannel.hpp  ProjectChannel.cpp  ProjectChannel.hpp  TokenChannel.cpp  TokenChannel.hpp  WalletChannel.cpp  WalletChannel.hpp
src/exceptions/: CMakeLists.txt  TimeoutException.cpp
src/graphql/: AbstractGraphqlRequest.cpp  AbstractGraphqlResponse.cpp  CMakeLists.txt  GraphqlError.cpp  GraphqlQueryRegistry.cpp  GraphqlResponseImpl.cpp  GraphqlResponseUtils.cpp  GraphqlTemplate.cpp  GraphqlTemplate.hpp  TemplateConstants.cpp  TemplateConstants.hpp
src/http/: AbstractHttpClient.cpp  CMakeLists.txt  HttpClient.cpp  HttpClientImpl.cpp  HttpClientImpl.hpp  HttpRequest.cpp  HttpResponse.cpp  TrustedPlatformHandler.cpp
src/include/: AssetChannel.hpp  ConnectionState.hpp  Constants.hpp  EnumUtils.hpp  ErrorCodes.hpp  EventTypeDef.hpp  FutureUtils.hpp  HttpClient.hpp  HttpClientImpl.hpp  IChannel.hpp  ISubscriptionEventListener.hpp  PlayerChannel.hpp  ProjectChannel.hpp  PusherClient.hpp  PusherConnectionState.hpp  PusherConstants.hpp  PusherErrorCodes.hpp  PusherEvent.hpp  PusherEventListener.hpp  PusherException.hpp  PusherOptions.hpp  RapidJsonUtils.hpp  StringUtils.hpp  TemplateConstants.hpp  TimeoutException.hpp  WalletChannel.hpp  WebsocketClient.hpp  WebsocketClientImpl.hpp
src/json/: CMakeLists.txt  JsonValue.cpp
src/models/: AccessToken.cpp  Asset.cpp  AssetConfigData.cpp  AssetFilter.cpp  AssetSort.cpp  AssetSortInput.cpp  AssetStateData.cpp  AssetTransferFeeSettings.cpp  AssetTransferFeeSettingsInput.cpp  AssetVariant.cpp  Balance.cpp  BalanceFilter.cpp  BlockchainData.cpp  CMakeLists.txt  Contracts.cpp  GasPrices.cpp  LinkingInfo.cpp  Melt.cpp  MeltInput.cpp  MintInput.cpp  NotificationEvent.cpp  Notifications.cpp  PaginationCursor.cpp  PaginationInput.cpp  PaginationOptions.cpp  Platform.cpp  Player.cpp  PlayerFilter.cpp  Project.cpp  Pusher.cpp  PusherChannels.cpp  PusherOptions.cpp  Request.cpp  SupplyModels.cpp  Token.cpp  TokenConfigData.cpp  TokenFilter.cpp  TokenSort.cpp  TokenStateData.cpp  TokenTransferFeeSettings.cpp  (+13 more)
src/pusher/: CMakeLists.txt  PusherChannel.cpp  PusherClient.cpp  PusherEvent.cpp  PusherException.cpp  PusherOptions.cpp
src/schemas/: BaseSchema.cpp  CMakeLists.txt
src/schemas/player/: CMakeLists.txt  PlayerSchema.cpp
src/schemas/project/: CMakeLists.txt  ProjectSchema.cpp
src/schemas/shared/: CMakeLists.txt  SharedSchema.cpp
src/utils/: CMakeLists.txt  EnumUtils.cpp  EnumUtils.hpp  FutureUtils.cpp  JsonUtils.cpp  Logger.cpp  LoggerProvider.cpp  RapidJsonUtils.cpp  RapidJsonUtils.hpp  StringUtils.cpp  StringUtils.hpp  Timer.cpp
src/websockets/: CMakeLists.txt  WebsocketClient.cpp  WebsocketClientImpl.cpp  WebsocketClientImpl.hpp
test/: CMakeLists.txt  CMakeLists.txt.in
test/include/: AssetFragmentArgumentsTestSuite.hpp  BalanceFragmentArgumentsTestSuite.hpp  ChannelsTestSuite.hpp  DummyObject.hpp  FakeGraphqlRequest.hpp  FakeWebSocketClient.hpp  FakeWebSocketClientImpl.hpp  JsonTestSuite.hpp  LoggerProviderTestSuite.hpp  Matchers.hpp  MockEventListener.hpp  MockHttpClient.hpp  MockHttpServer.hpp  MockLogger.hpp  MockSubscriptionEventListener.hpp  MockWebSocketClientImpl.hpp  MockWebsocketClient.hpp  MockWebsocketServer.hpp  PaginationArgumentsTestSuite.hpp  PlayerFragmentArgumentsTestSuite.hpp  ProjectTransactionRequestArgumentsTestSuite.hpp  PusherClientTestSuite.hpp  TestableBaseSchema.hpp  TestableProjectTransactionRequestArguments.hpp  TestableSharedAssetFragmentArguments.hpp  TestableSharedBalanceFragmentArguments.hpp  TestableSharedPaginationArguments.hpp  TestableSharedPlayerFragmentArguments.hpp  TestableSharedTransactionFragmentArguments.hpp  TestableWalletFragmentArguments.hpp  TransactionFragmentArgumentsTestSuite.hpp  TransactionRequestArgumentsTestSuite.hpp  VerificationTestSuite.hpp  WalletFragmentArgumentsTestSuite.hpp
test/mocks/: CMakeLists.txt  FakeGraphqlRequest.cpp  FakeWebSocketClient.cpp  FakeWebSocketClientImpl.cpp  MockEventListener.hpp  MockHttpServer.cpp  MockHttpServer.hpp  MockWebSocketClientImpl.cpp  MockWebSocketClientImpl.hpp  MockWebsocketServer.cpp  MockWebsocketServer.hpp
test/suites/: CMakeLists.txt  LoggerProviderTestSuite.cpp  PusherClientTestSuite.cpp  PusherClientTestSuite.hpp  VerificationTestSuite.cpp  VerificationTestSuite.hpp
test/unit/: CMakeLists.txt  ClientMiddlewareTest.cpp  ProjectClientReauthenticateTest.cpp  TrustedPlatformMiddlewareTest.cpp
test/unit/events/: AppChannelTest.cpp  AssetChannelTest.cpp  CMakeLists.txt  EventListenerRegistrationTest.cpp  EventTypeDefTest.cpp  PlayerChannelTest.cpp  ProjectChannelTest.cpp  PusherEventListenerTest.cpp  PusherEventServiceTest.cpp  PusherEventServiceWebsocketTest.cpp  RegistrationListenerConfigurationTest.cpp  TokenChannelTest.cpp  WalletChannelTest.cpp
test/unit/graphql/: AbstractGraphqlRequestTest.cpp  CMakeLists.txt  GraphqlErrorTest.cpp  (+5 more)
test/utils/: CMakeLists.txt  DummyObject.cpp  DummyObject.hpp  MockEventListener.hpp  MockHttpServer.cpp  MockHttpServer.hpp  MockSubscriptionEventListener.hpp  MockWebsocketServer.cpp  MockWebsocketServer.hpp  TestableBaseSchema.cpp  TestableProjectTransactionRequestArguments.cpp  TestableSharedAssetFragmentArguments.cpp  TestableSharedBalanceFragmentArguments.cpp  TestableSharedPaginationArguments.cpp  TestableSharedPlayerFragmentArguments.cpp  TestableSharedTransactionFragmentArguments.cpp  TestableWalletFragmentArguments.cpp  VerificationSuite.cpp  VerificationSuite.hpp
utils/: CMakeLists.txt
utils/src/: CMakeLists.txt  StringUtils.cpp
(+1919 files in other folders)
