include_directories(${ENJINCPPSDK_SOURCE_DIRECTORY}/src)

set(TEST_FILES
        graphql/AbstractGraphqlRequestTest.cpp
        graphql/GraphqlErrorTest.cpp
        graphql/GraphqlQueryRegistryTest.cpp
        graphql/GraphqlResponseTest.cpp
        http/HttpClientImplTest.cpp
        http/HttpRequestBuilderTest.cpp
        http/HttpResponseBuilderTest.cpp
        http/HttpResponseTest.cpp
        models/AccessTokenTest.cpp
        models/BalanceFilterTest.cpp
        models/BalanceTest.cpp
        models/BlockchainDataTest.cpp
        models/ContractsTest.cpp
        models/GasPricesTest.cpp
        models/LinkingInfoTest.cpp
        models/MeltTest.cpp
        models/MintInputTest.cpp
        models/ModelsTestSuite.hpp
        models/NotificationsTest.cpp
        models/PaginationCursorTest.cpp
        models/PaginationOptionsTest.cpp
        models/PlatformTest.cpp
        models/PlayerFilterTest.cpp
        models/PlayerTest.cpp
        models/ProjectTest.cpp
        models/PusherTest.cpp
        models/PusherChannelsTest.cpp
        models/PusherOptionsTest.cpp
        models/RequestTest.cpp
        models/SupplyModelsTest.cpp
        models/TokenFilterTest.cpp
        models/TokenTest.cpp
        models/TokenConfigDataTest.cpp
        models/TokenSortTest.cpp
        models/TokenStateDataTest.cpp
        models/TokenTransferFeeSettingsInputTest.cpp
        models/TokenTransferFeeSettingsTest.cpp
        models/TokenVariantTest.cpp
        models/TradeTest.cpp
        models/TransactionEventTest.cpp
        models/TransactionFilterTest.cpp
        models/TransactionLogTest.cpp
        models/TransactionReceiptTest.cpp
        models/TransactionSortTest.cpp
        models/TransferTest.cpp
        models/WalletTest.cpp
        schemas/BaseSchemaTest.cpp
        schemas/project/mutations/CreatePlayerTest.cpp
        schemas/project/mutations/CreateTokenTest.cpp
        schemas/project/mutations/DecreaseMaxMeltFeeTest.cpp
        schemas/project/mutations/DecreaseMaxTransferFeeTest.cpp
        schemas/project/mutations/DeletePlayerTest.cpp
        schemas/project/mutations/InvalidateTokenMetadataTest.cpp
        schemas/project/mutations/MintTokenTest.cpp
        schemas/project/mutations/ReleaseReserveTest.cpp
        schemas/project/mutations/SetMeltFeeTest.cpp
        schemas/project/mutations/SetTransferFeeTest.cpp
        schemas/project/mutations/SetTransferableTest.cpp
        schemas/project/mutations/SetUriTest.cpp
        schemas/project/mutations/SetWhitelistedTest.cpp
        schemas/project/mutations/UnlinkWalletTest.cpp
        schemas/project/queries/AuthPlayerTest.cpp
        schemas/project/queries/AuthProjectTest.cpp
        schemas/project/queries/GetPlayerTest.cpp
        schemas/project/queries/GetPlayersTest.cpp
        schemas/project/queries/GetWalletTest.cpp
        schemas/project/queries/GetWalletsTest.cpp
        schemas/shared/arguments/BalanceFragmentArgumentsTest.cpp
        schemas/shared/arguments/PaginationArgumentsTest.cpp
        schemas/shared/arguments/PlayerFragmentArgumentsTest.cpp
        schemas/shared/arguments/TokenFragmentArgumentsTest.cpp
        schemas/shared/arguments/TransactionFragmentArgumentsTest.cpp
        schemas/shared/arguments/TransactionRequestArgumentsTest.cpp
        schemas/shared/arguments/WalletFragmentArgumentsTest.cpp
        schemas/shared/mutations/AdvancedSendTokenTest.cpp
        schemas/shared/mutations/ApproveEnjTest.cpp
        schemas/shared/mutations/CancelTransactionTest.cpp
        schemas/shared/mutations/CompleteTradeTest.cpp
        schemas/shared/mutations/CreateTradeTest.cpp
        schemas/shared/mutations/MeltTokenTest.cpp
        schemas/shared/mutations/MessageTest.cpp
        schemas/shared/mutations/SendEnjTest.cpp
        schemas/shared/mutations/SendTokenTest.cpp
        schemas/shared/mutations/SetApprovalForAllTest.cpp
        schemas/shared/queries/GetBalancesTest.cpp
        schemas/shared/queries/GetPlatformTest.cpp
        schemas/shared/queries/GetProjectTest.cpp
        schemas/shared/queries/GetRequestTest.cpp
        schemas/shared/queries/GetRequestsTest.cpp
        schemas/shared/queries/GetTokenTest.cpp
        schemas/shared/queries/GetTokensTest.cpp
        utils/EnumUtilsTest.cpp
        utils/RapidJsonUtilsTest.cpp
        utils/StringUtilsTest.cpp
        ../utils/MockHttpServer.cpp
        ../utils/MockHttpServer.hpp
        ../utils/DummyObject.cpp
        ../utils/DummyObject.hpp
)
add_executable(unittests ${TEST_FILES})
target_link_libraries(unittests
        PUBLIC
        enjinsdk
        PRIVATE
        ${CONAN_LIBS}
)
target_include_directories(
        unittests
        PRIVATE
        ${PROJECT_SOURCE_DIR}/src/graphql
        ${PROJECT_SOURCE_DIR}/src/http
        ${PROJECT_SOURCE_DIR}/src/utils
)
